C/target/generated-sources/antlr4/CParser.cpp

#include "wci/intermediate/TypeSpec.h"
using namespace wci::intermediate;


// Generated from C.g4 by ANTLR 4.7.2


#include "CVisitor.h"

#include "CParser.h"


using namespace antlrcpp;
using namespace antlr4;

CParser::CParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

CParser::~CParser() {
  delete _interpreter;
}

std::string CParser::getGrammarFileName() const {
  return "C.g4";
}

const std::vector<std::string>& CParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& CParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

CParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CParser::HeaderContext* CParser::ProgramContext::header() {
  return getRuleContext<CParser::HeaderContext>(0);
}

CParser::Main_blockContext* CParser::ProgramContext::main_block() {
  return getRuleContext<CParser::Main_blockContext>(0);
}

std::vector<CParser::FuncContext *> CParser::ProgramContext::func() {
  return getRuleContexts<CParser::FuncContext>();
}

CParser::FuncContext* CParser::ProgramContext::func(size_t i) {
  return getRuleContext<CParser::FuncContext>(i);
}


size_t CParser::ProgramContext::getRuleIndex() const {
  return CParser::RuleProgram;
}


antlrcpp::Any CParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

CParser::ProgramContext* CParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, CParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(93);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(90);
        func(); 
      }
      setState(95);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(96);
    header();
    setState(97);
    main_block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HeaderContext ------------------------------------------------------------------

CParser::HeaderContext::HeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CParser::HeaderContext::VOID() {
  return getToken(CParser::VOID, 0);
}

tree::TerminalNode* CParser::HeaderContext::MAIN() {
  return getToken(CParser::MAIN, 0);
}

std::vector<CParser::Parm_decl_listContext *> CParser::HeaderContext::parm_decl_list() {
  return getRuleContexts<CParser::Parm_decl_listContext>();
}

CParser::Parm_decl_listContext* CParser::HeaderContext::parm_decl_list(size_t i) {
  return getRuleContext<CParser::Parm_decl_listContext>(i);
}


size_t CParser::HeaderContext::getRuleIndex() const {
  return CParser::RuleHeader;
}


antlrcpp::Any CParser::HeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitHeader(this);
  else
    return visitor->visitChildren(this);
}

CParser::HeaderContext* CParser::header() {
  HeaderContext *_localctx = _tracker.createInstance<HeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, CParser::RuleHeader);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(CParser::VOID);
    setState(100);
    match(CParser::MAIN);
    setState(101);
    match(CParser::T__0);
    setState(105);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CParser::INTEGER)
      | (1ULL << CParser::FLOAT)
      | (1ULL << CParser::VOID))) != 0)) {
      setState(102);
      parm_decl_list();
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(108);
    match(CParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Main_blockContext ------------------------------------------------------------------

CParser::Main_blockContext::Main_blockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CParser::MainContext* CParser::Main_blockContext::main() {
  return getRuleContext<CParser::MainContext>(0);
}

CParser::Decl_listContext* CParser::Main_blockContext::decl_list() {
  return getRuleContext<CParser::Decl_listContext>(0);
}


size_t CParser::Main_blockContext::getRuleIndex() const {
  return CParser::RuleMain_block;
}


antlrcpp::Any CParser::Main_blockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitMain_block(this);
  else
    return visitor->visitChildren(this);
}

CParser::Main_blockContext* CParser::main_block() {
  Main_blockContext *_localctx = _tracker.createInstance<Main_blockContext>(_ctx, getState());
  enterRule(_localctx, 4, CParser::RuleMain_block);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    match(CParser::T__2);
    setState(112);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CParser::INTEGER)
      | (1ULL << CParser::FLOAT)
      | (1ULL << CParser::VOID))) != 0)) {
      setState(111);
      decl_list();
    }
    setState(114);
    main();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainContext ------------------------------------------------------------------

CParser::MainContext::MainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CParser::Main_closingContext* CParser::MainContext::main_closing() {
  return getRuleContext<CParser::Main_closingContext>(0);
}

CParser::Stmt_listContext* CParser::MainContext::stmt_list() {
  return getRuleContext<CParser::Stmt_listContext>(0);
}


size_t CParser::MainContext::getRuleIndex() const {
  return CParser::RuleMain;
}


antlrcpp::Any CParser::MainContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitMain(this);
  else
    return visitor->visitChildren(this);
}

CParser::MainContext* CParser::main() {
  MainContext *_localctx = _tracker.createInstance<MainContext>(_ctx, getState());
  enterRule(_localctx, 6, CParser::RuleMain);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CParser::T__7)
      | (1ULL << CParser::IF)
      | (1ULL << CParser::DO)
      | (1ULL << CParser::IDENTIFIER))) != 0)) {
      setState(116);
      stmt_list();
    }
    setState(119);
    main_closing();
    setState(120);
    match(CParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Main_closingContext ------------------------------------------------------------------

CParser::Main_closingContext::Main_closingContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CParser::Main_closingContext::RETURN() {
  return getToken(CParser::RETURN, 0);
}


size_t CParser::Main_closingContext::getRuleIndex() const {
  return CParser::RuleMain_closing;
}


antlrcpp::Any CParser::Main_closingContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitMain_closing(this);
  else
    return visitor->visitChildren(this);
}

CParser::Main_closingContext* CParser::main_closing() {
  Main_closingContext *_localctx = _tracker.createInstance<Main_closingContext>(_ctx, getState());
  enterRule(_localctx, 8, CParser::RuleMain_closing);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(CParser::RETURN);
    setState(123);
    match(CParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Decl_listContext ------------------------------------------------------------------

CParser::Decl_listContext::Decl_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CParser::Var_listContext *> CParser::Decl_listContext::var_list() {
  return getRuleContexts<CParser::Var_listContext>();
}

CParser::Var_listContext* CParser::Decl_listContext::var_list(size_t i) {
  return getRuleContext<CParser::Var_listContext>(i);
}


size_t CParser::Decl_listContext::getRuleIndex() const {
  return CParser::RuleDecl_list;
}


antlrcpp::Any CParser::Decl_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitDecl_list(this);
  else
    return visitor->visitChildren(this);
}

CParser::Decl_listContext* CParser::decl_list() {
  Decl_listContext *_localctx = _tracker.createInstance<Decl_listContext>(_ctx, getState());
  enterRule(_localctx, 10, CParser::RuleDecl_list);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(125);
    var_list();
    setState(130);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(126);
        match(CParser::T__4);
        setState(127);
        var_list(); 
      }
      setState(132);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
    setState(133);
    match(CParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_listContext ------------------------------------------------------------------

CParser::Var_listContext::Var_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CParser::Var_typeContext* CParser::Var_listContext::var_type() {
  return getRuleContext<CParser::Var_typeContext>(0);
}

std::vector<CParser::Var_nameContext *> CParser::Var_listContext::var_name() {
  return getRuleContexts<CParser::Var_nameContext>();
}

CParser::Var_nameContext* CParser::Var_listContext::var_name(size_t i) {
  return getRuleContext<CParser::Var_nameContext>(i);
}


size_t CParser::Var_listContext::getRuleIndex() const {
  return CParser::RuleVar_list;
}


antlrcpp::Any CParser::Var_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitVar_list(this);
  else
    return visitor->visitChildren(this);
}

CParser::Var_listContext* CParser::var_list() {
  Var_listContext *_localctx = _tracker.createInstance<Var_listContext>(_ctx, getState());
  enterRule(_localctx, 12, CParser::RuleVar_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    var_type();
    setState(136);
    var_name();
    setState(141);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CParser::T__5) {
      setState(137);
      match(CParser::T__5);
      setState(138);
      var_name();
      setState(143);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_nameContext ------------------------------------------------------------------

CParser::Var_nameContext::Var_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CParser::Var_nameContext::IDENTIFIER() {
  return getToken(CParser::IDENTIFIER, 0);
}


size_t CParser::Var_nameContext::getRuleIndex() const {
  return CParser::RuleVar_name;
}


antlrcpp::Any CParser::Var_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitVar_name(this);
  else
    return visitor->visitChildren(this);
}

CParser::Var_nameContext* CParser::var_name() {
  Var_nameContext *_localctx = _tracker.createInstance<Var_nameContext>(_ctx, getState());
  enterRule(_localctx, 14, CParser::RuleVar_name);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(144);
    match(CParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_typeContext ------------------------------------------------------------------

CParser::Var_typeContext::Var_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CParser::TypesContext* CParser::Var_typeContext::types() {
  return getRuleContext<CParser::TypesContext>(0);
}


size_t CParser::Var_typeContext::getRuleIndex() const {
  return CParser::RuleVar_type;
}


antlrcpp::Any CParser::Var_typeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitVar_type(this);
  else
    return visitor->visitChildren(this);
}

CParser::Var_typeContext* CParser::var_type() {
  Var_typeContext *_localctx = _tracker.createInstance<Var_typeContext>(_ctx, getState());
  enterRule(_localctx, 16, CParser::RuleVar_type);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(146);
    types();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypesContext ------------------------------------------------------------------

CParser::TypesContext::TypesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CParser::TypesContext::getRuleIndex() const {
  return CParser::RuleTypes;
}

void CParser::TypesContext::copyFrom(TypesContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
  this->type = ctx->type;
}

//----------------- FloatTypeContext ------------------------------------------------------------------

tree::TerminalNode* CParser::FloatTypeContext::FLOAT() {
  return getToken(CParser::FLOAT, 0);
}

CParser::FloatTypeContext::FloatTypeContext(TypesContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CParser::FloatTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitFloatType(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IntegerTypeContext ------------------------------------------------------------------

tree::TerminalNode* CParser::IntegerTypeContext::INTEGER() {
  return getToken(CParser::INTEGER, 0);
}

CParser::IntegerTypeContext::IntegerTypeContext(TypesContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CParser::IntegerTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitIntegerType(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VoidTypeContext ------------------------------------------------------------------

tree::TerminalNode* CParser::VoidTypeContext::VOID() {
  return getToken(CParser::VOID, 0);
}

CParser::VoidTypeContext::VoidTypeContext(TypesContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CParser::VoidTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitVoidType(this);
  else
    return visitor->visitChildren(this);
}
CParser::TypesContext* CParser::types() {
  TypesContext *_localctx = _tracker.createInstance<TypesContext>(_ctx, getState());
  enterRule(_localctx, 18, CParser::RuleTypes);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(151);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CParser::INTEGER: {
        _localctx = dynamic_cast<TypesContext *>(_tracker.createInstance<CParser::IntegerTypeContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(148);
        match(CParser::INTEGER);
        break;
      }

      case CParser::FLOAT: {
        _localctx = dynamic_cast<TypesContext *>(_tracker.createInstance<CParser::FloatTypeContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(149);
        match(CParser::FLOAT);
        break;
      }

      case CParser::VOID: {
        _localctx = dynamic_cast<TypesContext *>(_tracker.createInstance<CParser::VoidTypeContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(150);
        match(CParser::VOID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

CParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CParser::StmtContext::getRuleIndex() const {
  return CParser::RuleStmt;
}

void CParser::StmtContext::copyFrom(StmtContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FuncAssignmentStmtContext ------------------------------------------------------------------

CParser::Func_assignmentContext* CParser::FuncAssignmentStmtContext::func_assignment() {
  return getRuleContext<CParser::Func_assignmentContext>(0);
}

CParser::FuncAssignmentStmtContext::FuncAssignmentStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CParser::FuncAssignmentStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitFuncAssignmentStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfStmtContext ------------------------------------------------------------------

CParser::If_stmtContext* CParser::IfStmtContext::if_stmt() {
  return getRuleContext<CParser::If_stmtContext>(0);
}

CParser::IfStmtContext::IfStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CParser::IfStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitIfStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DoWhileStmtContext ------------------------------------------------------------------

CParser::Do_while_stmtContext* CParser::DoWhileStmtContext::do_while_stmt() {
  return getRuleContext<CParser::Do_while_stmtContext>(0);
}

CParser::DoWhileStmtContext::DoWhileStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CParser::DoWhileStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitDoWhileStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncCallStmtContext ------------------------------------------------------------------

CParser::Func_callContext* CParser::FuncCallStmtContext::func_call() {
  return getRuleContext<CParser::Func_callContext>(0);
}

CParser::FuncCallStmtContext::FuncCallStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CParser::FuncCallStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitFuncCallStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PrintfStmtContext ------------------------------------------------------------------

CParser::Printf_stmtContext* CParser::PrintfStmtContext::printf_stmt() {
  return getRuleContext<CParser::Printf_stmtContext>(0);
}

CParser::PrintfStmtContext::PrintfStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CParser::PrintfStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitPrintfStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignmentStmtContext ------------------------------------------------------------------

CParser::Assignment_stmtContext* CParser::AssignmentStmtContext::assignment_stmt() {
  return getRuleContext<CParser::Assignment_stmtContext>(0);
}

CParser::AssignmentStmtContext::AssignmentStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CParser::AssignmentStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitAssignmentStmt(this);
  else
    return visitor->visitChildren(this);
}
CParser::StmtContext* CParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 20, CParser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(167);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<CParser::AssignmentStmtContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(153);
      assignment_stmt();
      setState(154);
      match(CParser::T__4);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<CParser::IfStmtContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(156);
      if_stmt();
      break;
    }

    case 3: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<CParser::DoWhileStmtContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(157);
      do_while_stmt();
      setState(158);
      match(CParser::T__4);
      break;
    }

    case 4: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<CParser::FuncAssignmentStmtContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(160);
      func_assignment();
      break;
    }

    case 5: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<CParser::FuncCallStmtContext>(_localctx));
      enterOuterAlt(_localctx, 5);
      setState(161);
      func_call();
      setState(162);
      match(CParser::T__4);
      break;
    }

    case 6: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<CParser::PrintfStmtContext>(_localctx));
      enterOuterAlt(_localctx, 6);
      setState(164);
      printf_stmt();
      setState(165);
      match(CParser::T__4);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Stmt_listContext ------------------------------------------------------------------

CParser::Stmt_listContext::Stmt_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CParser::StmtContext *> CParser::Stmt_listContext::stmt() {
  return getRuleContexts<CParser::StmtContext>();
}

CParser::StmtContext* CParser::Stmt_listContext::stmt(size_t i) {
  return getRuleContext<CParser::StmtContext>(i);
}


size_t CParser::Stmt_listContext::getRuleIndex() const {
  return CParser::RuleStmt_list;
}


antlrcpp::Any CParser::Stmt_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitStmt_list(this);
  else
    return visitor->visitChildren(this);
}

CParser::Stmt_listContext* CParser::stmt_list() {
  Stmt_listContext *_localctx = _tracker.createInstance<Stmt_listContext>(_ctx, getState());
  enterRule(_localctx, 22, CParser::RuleStmt_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(169);
    stmt();
    setState(173);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CParser::T__7)
      | (1ULL << CParser::IF)
      | (1ULL << CParser::DO)
      | (1ULL << CParser::IDENTIFIER))) != 0)) {
      setState(170);
      stmt();
      setState(175);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Assignment_stmtContext ------------------------------------------------------------------

CParser::Assignment_stmtContext::Assignment_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CParser::VariableContext* CParser::Assignment_stmtContext::variable() {
  return getRuleContext<CParser::VariableContext>(0);
}

CParser::ExprContext* CParser::Assignment_stmtContext::expr() {
  return getRuleContext<CParser::ExprContext>(0);
}


size_t CParser::Assignment_stmtContext::getRuleIndex() const {
  return CParser::RuleAssignment_stmt;
}


antlrcpp::Any CParser::Assignment_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitAssignment_stmt(this);
  else
    return visitor->visitChildren(this);
}

CParser::Assignment_stmtContext* CParser::assignment_stmt() {
  Assignment_stmtContext *_localctx = _tracker.createInstance<Assignment_stmtContext>(_ctx, getState());
  enterRule(_localctx, 24, CParser::RuleAssignment_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(176);
    variable();
    setState(177);
    match(CParser::T__6);
    setState(178);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_stmtContext ------------------------------------------------------------------

CParser::If_stmtContext::If_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CParser::If_partContext* CParser::If_stmtContext::if_part() {
  return getRuleContext<CParser::If_partContext>(0);
}
